--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="https://ab80x08.github.io/4lex8lue/manifest.json">
 </head>
 <body>
-  <div class="container">
+  <div class="container" style="display: none;">
     <h1>pwa !</h1>
     <p>This is BRUH</p>
     <button id="installBtn">Install App</button>
