Update and rename index.html to indexd.html

--- a/indexd.html
+++ b/indexd.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PWA</title>
+  <title>Download</title>
   <link rel="stylesheet" href="https://ab80x08.github.io/4lex8lue/styles.css">
   <link rel="manifest" href="https://ab80x08.github.io/4lex8lue/manifest.json">
 </head>
 <body>
-  <div class="container" style="display: none;">
-    <h1>pwa !</h1>
-    <p>This is BRUH</p>
+  <div class="container">
+    <h1>Download</h1>
+    <p>This let's you access the whole website as an application. it's made for a smooth experience.</p>
     <button id="installBtn">Install App</button>
   </div>
   <script src="https://ab80x08.github.io/4lex8lue/app.js"></script>
