--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Download</title>
+  <meta http-equiv="refresh" content="10;URL=bit.ly/4lex8lue">
   <link rel="manifest" href="https://ab80x08.github.io/4lex8lue/manifest.json">
 </head>
 <body>
   <div class="container">
-    <h1>Download</h1>
-    <p>This let's you access the whole website as an application. it's made for a smooth experience.</p>
+    <h1>Starting App...</h1>
+    <p>Please Wait...</p>
+    <marquee behavior="scroll" direction="right" speed="55" height="100px">..........</marquee>
   </div>
 </body>
 </html>
