--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Download</title>
-  <meta http-equiv="refresh" content="10;URL=bit.ly/4lex8lue">
+  <meta http-equiv="refresh" content="10;URL=https://twitch.tv">
   <link rel="manifest" href="https://ab80x08.github.io/4lex8lue/manifest.json">
 </head>
 <body>
   <div class="container">
-    <h1>Starting App...</h1>
-    <p>Please Wait...</p>
-    <marquee behavior="scroll" direction="right" speed="55" height="100px">..........</marquee>
+    <h1>Starting App</h1>
+    <h7>Please Wait</h7>
+    <marquee behavior="scroll" direction="right" speed="48" height="100px">------------</marquee>
   </div>
 </body>
 </html>
