--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Download</title>
+  <title>StartUp</title>
   <meta http-equiv="refresh" content="12;URL=https://ab80x08.github.io/a">
   <link rel="manifest" href="https://ab80x08.github.io/4lex8lue/manifest.json">
 </head>
