--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>StartUp</title>
-  <meta http-equiv="refresh" content="12;URL=https://ab80x08.github.io/a">
   <link rel="manifest" href="https://ab80x08.github.io/4lex8lue/manifest.json">
 </head>
 <body>
-  <div class="container">
-    <h1>Starting App</h1>
-    <h7>Please Wait</h7>
-    <marquee behavior="scroll" direction="right" speed="48" height="100px">------------</marquee>
-  </div>
+  <h1>4lex8lue</h1>
 </body>
 </html>
